--- a/style.css
+++ b/style.css
@@ -10,4 +10,35 @@
     
 
 }
+.footer{
+    margin-top: 70%;
+    width: 99%;
+    height: 200px;
+    padding: 5px;
+    margin: 5px;
+    background-color:grey;
+}
 
+
+.clickablediv{
+    margin-top: 70%;
+    width: 180px;
+    height: 50px;
+    padding: 9px;
+    margin: 5px;
+    background-color:skyblue;
+    border:2px;
+    border-color: blue;
+    border-radius: 10px;
+    text-align: center;
+    font-size: large;
+    
+}
+.container{
+    margin-top: 70%;
+    width: 99%;
+    height: 200px;
+    padding: 5px;
+    margin: 5px;
+    background-color:whitesmoke;
+}
